# CompanionSamples

./: CMakeLists.txt  README.md  ressources.h.in  util.cpp  util.h
FeatureMatching/: CMakeLists.txt  CPUFeatureMatchingImageStream.cpp  CPUFeatureMatchingRealtime.cpp  CPUFeatureMatchingVideo.cpp  CudaFeatureMatchingVideo.cpp
HashMatching/: CMakeLists.txt  CPUHashMatchingVideo.cpp
HybridMatching/: CMakeLists.txt  CPUHybridMatchingVideo.cpp
ShapeDetection/: CMakeLists.txt  CPUShapeDetectionVideo.cpp
samples/: CMakeLists.txt  util.cpp
samples/FeatureMatching/: CMakeLists.txt  CPUFeatureMatchingImageStream.cpp  CPUFeatureMatchingRealtime.cpp  CPUFeatureMatchingVideo.cpp  CudaFeatureMatchingVideo.cpp  ressources.h.in  util.cpp  util.h
samples/HashMatching/: CMakeLists.txt  CPUHashMatchingVideo.cpp
